kubernetes/apps/vaultwarden/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
  labels:
    backups.kalexlab.xyz/use: "true"
