kubernetes/apps/vaultwarden/manifests/vaultwarden.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  labels:
    kalexlab.xyz/app: vaultwarden
    kalexlab.xyz/component: vaultwarden
spec:
  type: ClusterIP
  ports:
    - name: vaultwarden
      port: 8080
      protocol: TCP
  selector:
    kalexlab.xyz/app: vaultwarden
    kalexlab.xyz/component: vaultwarden
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden
  labels:
    kalexlab.xyz/app: vaultwarden
    kalexlab.xyz/component: vaultwarden
spec:
  serviceName: vaultwarden
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: vaultwarden
      kalexlab.xyz/component: vaultwarden
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: vaultwarden
        kalexlab.xyz/component: vaultwarden
        kalexlab.xyz/monitoring: "true"
    spec:
      restartPolicy: Always
      containers:
        - name: app
          image: "docker.io/vaultwarden/server:1.37.4-alpine"
          imagePullPolicy: Always
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 100Mi
              cpu: 2m
            limits:
              memory: 500Mi
              cpu: 200m
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            periodSeconds: 30
          volumeMounts:
            - mountPath: /data
              name: vaultwarden-data-pvc
      securityContext:
        runAsNonRoot: true
        runAsUser: 65535
        runAsGroup: 65535
        fsGroup: 65535
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      enableServiceLinks: false
      automountServiceAccountToken: false
  volumeClaimTemplates:
    - metadata:
        name: vaultwarden-data-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
